--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react_pattern",
+  "homepage": "http://rustron.github.io/product_list",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -48,6 +49,7 @@
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.2.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.2"
   }
